istio/src/04-matchlabel.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ratings
spec:
# START OMIT
  hosts:
  - ratings
  http:
  - match:
      sourceLabels:
        app: reviews
  - route:
    - destination:
        host: my-svc
        subset: v1
# END OMIT
